--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/tab_popular"
+                android:text="@string/popular"
                 android:textAlignment="center"
                 android:textStyle="bold" />
         </android.support.v7.widget.Toolbar>
