Migrating to Kotlin.

--- a/app/src/main/res/layout/home_movie_list_item.xml
+++ b/app/src/main/res/layout/home_movie_list_item.xml
@@ -4,23 +4,18 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent">
 
-    <com.facebook.drawee.view.SimpleDraweeView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/sdvHomeMovieItemImage"
+    <!-- <com.facebook.drawee.view.SimpleDraweeView xmlns:android="http://schemas.android.com/apk/res/android"
+         android:id="@+id/sdvHomeMovieItemImage"
+         android:layout_width="@dimen/home_movie_list_image_width"
+         android:layout_height="@dimen/home_movie_list_image_height"
+         fresco:actualImageScaleType="centerCrop"
+         fresco:layout_constraintEnd_toEndOf="parent"
+         fresco:roundedCornerRadius="2dp"
+         fresco:layout_constraintStart_toStartOf="parent"
+         fresco:layout_constraintTop_toTopOf="parent"
+         fresco:placeholderImage="@android:color/darker_gray" />-->
+    <com.themovielist.ui.MovieImageView
+        android:id="@+id/mivHomeMovieItem"
         android:layout_width="@dimen/home_movie_list_image_width"
-        android:layout_height="@dimen/home_movie_list_image_height"
-        fresco:actualImageScaleType="centerCrop"
-        fresco:layout_constraintEnd_toEndOf="parent"
-        fresco:layout_constraintStart_toStartOf="parent"
-        fresco:layout_constraintTop_toTopOf="parent"
-        fresco:placeholderImage="@android:color/darker_gray" />
-
-    <TextView
-        android:id="@+id/tvHomeMovieItemName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        fresco:layout_constraintBottom_toBottomOf="parent"
-        fresco:layout_constraintEnd_toEndOf="parent"
-        fresco:layout_constraintStart_toStartOf="parent"
-        fresco:layout_constraintTop_toBottomOf="@+id/sdvHomeMovieItemImage" />
+        android:layout_height="@dimen/home_movie_list_image_height" />
 </android.support.constraint.ConstraintLayout>
