--- a/app/src/main/res/layout/movie_image_view.xml
+++ b/app/src/main/res/layout/movie_image_view.xml
@@ -33,7 +33,8 @@
         <ImageView
             android:layout_width="@dimen/movie_image_view_favorite_button"
             android:layout_height="@dimen/movie_image_view_favorite_button"
-            fresco:srcCompat="" />
+            fresco:srcCompat="@drawable/close"
+            android:tint="@android:color/white"/>
 
         <TextView
             android:id="@+id/tvMovieImageViewDetailButton"
