--- a/app/src/main/res/layout/home_movie_list_item.xml
+++ b/app/src/main/res/layout/home_movie_list_item.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="match_parent">
-    <com.themovielist.ui.MovieImageView
+    <com.themovielist.ui.movieimageview.MovieImageView
         android:id="@+id/mivHomeMovieItem"
         android:layout_width="@dimen/home_movie_list_image_width"
         android:layout_height="@dimen/home_movie_list_image_height" />
