--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="movieImageViewMenuColor">#CA000000</color>
+    <color name="movieaSDASd">#32000000</color>
 </resources>
