--- a/app/src/main/res/layout/home_movie_list_item.xml
+++ b/app/src/main/res/layout/home_movie_list_item.xml
@@ -4,6 +4,6 @@
     android:layout_height="match_parent">
     <com.themovielist.ui.movieimageview.MovieImageView
         android:id="@+id/mivHomeMovieItem"
-        android:layout_width="@dimen/home_movie_list_image_width"
-        android:layout_height="@dimen/home_movie_list_image_height" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </android.support.constraint.ConstraintLayout>
