--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,7 @@
 
     <!-- Generic -->
     <dimen name="smallest_text_size">12sp</dimen>
+
+    <!-- In Theaters -->
+    <dimen name="in_theaters_backdrop_height">140dp</dimen>
 </resources>
