Working on In Theaters tab

--- a/app/src/main/res/layout/in_theaters_fragment.xml
+++ b/app/src/main/res/layout/in_theaters_fragment.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <com.facebook.drawee.view.SimpleDraweeView
-        android:id="@+id/ivMovieDetailBackdrop"
+        android:id="@+id/sdvMovieDetailBackdrop"
         android:layout_width="0dp"
         android:layout_height="@dimen/in_theaters_backdrop_height"
         android:adjustViewBounds="true"
@@ -17,4 +17,46 @@
         fresco:actualImageScaleType="centerCrop"
         fresco:overlayImage="@drawable/movie_image_view_menu_background"
         fresco:placeholderImage="@android:color/darker_gray" />
+
+    <TextView
+        android:id="@+id/tvInTheatersMovieDuration"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/LightMediumText"
+        fresco:text="1h 20m"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintStart_toStartOf="@+id/sdvMovieDetailBackdrop"
+        app:layout_constraintBottom_toBottomOf="@+id/sdvMovieDetailBackdrop"/>
+
+    <TextView
+        android:id="@+id/separator"
+        style="@style/Base.TextAppearance.AppCompat.Medium"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@id/tvInTheatersMovieDuration"
+        app:layout_constraintStart_toEndOf="@id/tvInTheatersMovieDuration"
+        android:layout_marginStart="8dp"
+        fresco:text="|" />
+    <TextView
+        android:id="@+id/tvInTheatersMovieGenres"
+        style="@style/LightMediumText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@id/separator"
+        app:layout_constraintStart_toEndOf="@id/separator"
+        android:layout_marginStart="8dp"
+        fresco:text="Action, Sci-Fi" />
+
+    <TextView
+        android:id="@+id/tvInTheatersMovieName"
+        style="@style/BlackMediumText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="sans-serif-black"
+        app:layout_constraintBottom_toTopOf="@+id/tvInTheatersMovieDuration"
+        app:layout_constraintStart_toStartOf="@+id/tvInTheatersMovieDuration"
+        fresco:text="Dunkirk" />
 </android.support.constraint.ConstraintLayout>
