--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,4 +29,10 @@
         <item name="android:fontFamily">sans-serif-light</item>
     </style>
 
+    <style name="BlackMediumText" parent="Base.TextAppearance.AppCompat.Medium">
+        <item name="android:fontFamily">sans-serif-black</item>
+    </style>
+
+
+
 </resources>
