--- a/app/src/main/res/layout/movie_detail_activity.xml
+++ b/app/src/main/res/layout/movie_detail_activity.xml
@@ -1,182 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:fresco="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?android:colorBackground">
+    android:fitsSystemWindows="true">
 
-    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/clMovieDetailContainer"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="16dp">
+        android:fitsSystemWindows="true"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <com.facebook.drawee.view.SimpleDraweeView
-            android:id="@+id/sdvMovieDetailBackdrop"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginBottom="24dp"
-            android:adjustViewBounds="true"
-            android:contentDescription="@string/movie_detail_backdrop_content_description"
-            app:layout_constraintBottom_toBottomOf="@+id/lbMovieDetailFavoriteContainer"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/backdrop_default"
-            fresco:actualImageScaleType="centerCrop"
-            fresco:placeholderImage="@android:color/darker_gray" />
 
-        <include
-            android:id="@+id/lbMovieDetailFavoriteContainer"
-            layout="@layout/like_button"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginTop="140dp"
-            app:layout_constraintRight_toLeftOf="@+id/guidelineMovieDetailRight"
-            app:layout_constraintTop_toTopOf="parent" />
+        <android.support.design.widget.CollapsingToolbarLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/collapse_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleMarginEnd="64dp"
+            app:expandedTitleMarginStart="48dp"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-        <com.facebook.drawee.view.SimpleDraweeView
-            android:id="@+id/sdvMovieDetailPoster"
-            android:layout_width="96dp"
-            android:layout_height="144dp"
-            android:layout_marginTop="130dp"
-            android:contentDescription="@string/movie_detail_poster_content_description"
-            app:layout_constraintLeft_toLeftOf="@+id/guidelineMovieDetailLeft"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/poster"
-            fresco:placeholderImage="@android:color/darker_gray" />
+            <include
+                layout="@layout/movie_header_detail"
+                android:fitsSystemWindows="true"
+                app:layout_collapseMode="parallax" />
+            <!-- <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                 xmlns:app="http://schemas.android.com/apk/res-auto"
+                 xmlns:fresco="http://schemas.android.com/tools"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 android:fitsSystemWindows="true"
+                 app:layout_collapseMode="parallax">
 
-        <TextView
-            android:id="@+id/tvMovieDetailTitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="7dp"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toRightOf="@+id/sdvMovieDetailPoster"
-            app:layout_constraintRight_toLeftOf="@+id/lbMovieDetailFavoriteContainer"
-            app:layout_constraintTop_toBottomOf="@+id/sdvMovieDetailBackdrop"
-            tools:text="FAST AND FURIOUS" />
+                 <com.facebook.drawee.view.SimpleDraweeView
+                     android:id="@+id/sdvMovieHeaderBackdrop"
+                     android:layout_width="0dp"
+                     android:layout_height="@dimen/in_theaters_backdrop_height"
+                     android:contentDescription="@string/movie_detail_backdrop_content_description"
+                     app:layout_constraintEnd_toEndOf="parent"
+                     app:layout_constraintStart_toStartOf="parent"
+                     app:layout_constraintTop_toTopOf="parent"
+                     fresco:actualImageScaleType="focusCrop"
+                     fresco:placeholderImage="@android:color/darker_gray"
+                     fresco:src="@drawable/backdrop_default" />
 
-        <me.zhanghai.android.materialratingbar.MaterialRatingBar
-            android:id="@+id/mrbMovieDetailRatingStar"
-            style="@style/Widget.MaterialRatingBar.RatingBar.Small"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="7dp"
-            app:layout_constraintLeft_toLeftOf="@+id/tvMovieDetailTitle"
-            app:layout_constraintTop_toBottomOf="@+id/tvMovieDetailTitle" />
+                 <View
+                     android:layout_width="0dp"
+                     android:layout_height="0dp"
+                     android:background="@drawable/movie_image_view_menu_background"
+                     app:layout_constraintBottom_toBottomOf="@id/sdvMovieHeaderBackdrop"
+                     app:layout_constraintEnd_toEndOf="@id/sdvMovieHeaderBackdrop"
+                     app:layout_constraintStart_toStartOf="@id/sdvMovieHeaderBackdrop"
+                     app:layout_constraintTop_toTopOf="@id/sdvMovieHeaderBackdrop" />
 
-        <TextView
-            android:id="@+id/tvMovieDetailSynopsis"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="@+id/guidelineMovieDetailLeft"
-            app:layout_constraintRight_toLeftOf="@+id/guidelineMovieDetailRight"
-            app:layout_constraintTop_toBottomOf="@+id/sdvMovieDetailPoster"
-            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non consequat odio. Sed luctus suscipit justo ac posuere. Sed diam sem, accumsan nec quam sed, vestibulum facilisis dui. Maecenas cursus, augue ut venenatis fringilla, nibh lectus varius velit, ut pulvinar dolor lorem vitae mauris. Aliquam erat volutpat. Aliquam id mauris nec eros rutrum malesuada. Donec at semper eros, id pharetra magna. Donec vehicula pretium egestas." />
+                 <TextView
+                     android:id="@+id/sdvMovieHeaderReleaseDate"
+                     style="@style/LightMediumText"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:layout_marginBottom="16dp"
+                     android:layout_marginStart="16dp"
+                     android:layout_marginTop="16dp"
+                     android:textColor="@android:color/white"
+                     app:layout_constraintBottom_toBottomOf="@+id/sdvMovieHeaderBackdrop"
+                     app:layout_constraintStart_toStartOf="@+id/sdvMovieHeaderBackdrop"
+                     fresco:text="1h 20m" />
 
-        <android.support.constraint.Guideline
-            android:id="@+id/guidelineMovieDetailLeft"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_begin="16dp" />
+                 <TextView
+                     android:id="@+id/separator"
+                     style="@style/Base.TextAppearance.AppCompat.Medium"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:layout_marginStart="8dp"
+                     android:text="@string/dont_know_the_name_separator"
+                     android:textColor="@android:color/white"
+                     app:layout_constraintBottom_toBottomOf="@id/sdvMovieHeaderReleaseDate"
+                     app:layout_constraintStart_toEndOf="@id/sdvMovieHeaderReleaseDate" />
 
-        <android.support.constraint.Guideline
-            android:id="@+id/guidelineMovieDetailRight"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_end="16dp" />
+                 <TextView
+                     android:id="@+id/tvMovieHeaderMovieGenres"
+                     style="@style/LightMediumText"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:layout_marginStart="8dp"
+                     android:textColor="@android:color/white"
+                     app:layout_constraintBottom_toBottomOf="@id/separator"
+                     app:layout_constraintStart_toEndOf="@id/separator"
+                     fresco:text="Action, Sci-Fi" />
 
-        <TextView
-            android:id="@+id/tvMovieDetailRating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="0dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="0dp"
-            android:background="@drawable/background_rating"
-            android:padding="3dp"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toTopOf="@+id/mrbMovieDetailRatingStar"
-            app:layout_constraintLeft_toRightOf="@+id/mrbMovieDetailRatingStar"
-            app:layout_constraintTop_toBottomOf="@+id/mrbMovieDetailRatingStar"
-            tools:text="8,4" />
+                 <TextView
+                     android:id="@+id/tvMovieHeaderMovieName"
+                     style="@style/BlackLargeText"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:layout_marginBottom="8dp"
+                     android:textColor="@android:color/white"
+                     app:layout_constraintBottom_toTopOf="@+id/sdvMovieHeaderReleaseDate"
+                     app:layout_constraintStart_toStartOf="@+id/sdvMovieHeaderReleaseDate"
+                     fresco:text="Dunkirk" />
+             </android.support.constraint.ConstraintLayout>-->
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/reviews"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/guidelineMovieDetailLeft"
-            app:layout_constraintTop_toBottomOf="@+id/tvMovieDetailSynopsis" />
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbarMovieDetail"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvMovieDetailReviews"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/guidelineMovieDetailRight"
-            app:layout_constraintStart_toStartOf="@+id/guidelineMovieDetailLeft"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+        </android.support.design.widget.CollapsingToolbarLayout>
+    </android.support.design.widget.AppBarLayout>
 
-        <TextView
-            android:id="@+id/tvMovieDetailShowAllReviews"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/show_all_reviews"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/colorAccent"
-            app:layout_constraintStart_toStartOf="@+id/rvMovieDetailReviews"
-            app:layout_constraintTop_toBottomOf="@+id/rvMovieDetailReviews" />
+    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <TextView
-            android:id="@+id/textView_trailers"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/trailers"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/guidelineMovieDetailLeft"
-            app:layout_constraintTop_toBottomOf="@+id/tvMovieDetailShowAllReviews" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvMovieDetailTrailers"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toStartOf="@+id/guidelineMovieDetailRight"
-            app:layout_constraintStart_toStartOf="@+id/textView_trailers"
-            app:layout_constraintTop_toBottomOf="@+id/textView_trailers" />
+        </android.support.constraint.ConstraintLayout>
 
-        <TextView
-            android:id="@+id/tvMovieDetailShowAllTrailers"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/show_all_trailers"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/colorAccent"
-            app:layout_constraintStart_toStartOf="@+id/rvMovieDetailTrailers"
-            app:layout_constraintTop_toBottomOf="@+id/rvMovieDetailTrailers" />
+    </android.support.v4.widget.NestedScrollView>
 
-    </android.support.constraint.ConstraintLayout>
-</ScrollView>
+</android.support.design.widget.CoordinatorLayout>
