--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="movieImageViewMenuColor">#CA000000</color>
     <color name="movieaSDASd">#32000000</color>
+
+    <color name="black_alpha_40">#66000000</color>
 </resources>
